Initial commit - Pixel art maker game

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <title>Pixel Art Maker!</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Monoton">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
 
 <body>
@@ -25,7 +25,7 @@
     <table id="pixel_canvas"></table>
 
     <script type="text/javascript" src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
-    <script src="designs.js"></script>
+    <script src="scripts/designs.js"></script>
     
 
 </body>
