--- a/index.html
+++ b/index.html
@@ -16,10 +16,12 @@
         <input type="number" id="input_height" name="height"  value=""> Grid Width:
         <input type="number" id="input_width" name="width"  value="">
         <input type="submit" id="btnSubmit">
+        <input type="reset" id="btnReset">
+        
     </form>
 
     <h2>Pick A Color</h2>
-    <input type="color" id="colorPicker">
+    <input type="color" id="colorPicker" value="#2dd0e5">
 
     <h2>Design Canvas</h2>
     <table id="pixel_canvas"></table>
