Corrected the responsiveness for smaller screen and added Collapsable 'Instructions'

--- a/index.html
+++ b/index.html
@@ -55,14 +55,18 @@
             </div>
             <hr>
             <div class="instructions">
-                <h4> Instructions: </h4>
-                <ol>
-                    <li>Choose predefined colour OR pick custom colour.</li>
-                    <li>Single click to fill each pixel OR click and drag to fill the pixels.</li>
-                    <li>Double click on single pixel to delete the filled colour.</li>
-                    <li>Pick 'Eraser' to erase the colour in pixels.</li>
-                    
-                </ol>
+                <div class="collapsed instructions_header">
+                    <h4> Instructions: </h4>
+                </div>
+                <div class="collapsed instructions_body">
+                    <ul>
+                        <li>1. Choose predefined colour OR pick custom colour.</li>
+                        <li>2. Single click to fill each pixel OR click and drag to fill the pixels.</li>
+                        <li>3. Double click on single pixel to delete the filled colour.</li>
+                        <li>4. Pick 'Eraser' to erase the colour in pixels.</li>
+
+                    </ul>
+                </div>
             </div>
 
 
