Now grid size changes when window is resized and Modified eraser section

--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
             <hr>
 
             <div class="eraser">
-                <img class="eraserIcon" src="images/eraser.png" alt="Eraser icon">
-                <p class="eraserText">Eraser</p>
+                <img class="eraserIcon" src="images/eraser2.png" alt="Eraser icon">
+                <!-- <p class="eraserText">Eraser</p> -->
             </div>
             <hr>
             <div class="instructions">
