Modified document.ready function, added a footer and some style changes for larger text resolutions

--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
             </div>
             <hr>
             <div class="instructions">
-                <div class="collapsed instructions_header">
+                <div class="instructions_header">
                     <h4> Instructions: </h4>
                 </div>
-                <div class="collapsed instructions_body">
+                <div class="instructions_body">
                     <ul>
                         <li>1. Choose predefined colour OR pick custom colour.</li>
                         <li>2. Single click to fill each pixel OR click and drag to fill the pixels.</li>
@@ -78,6 +78,9 @@
     <script type="text/javascript" src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
     <script src="scripts/designs.js"></script>
 
+    <div class="footer">
+        <footer>&copy; 2017 Page designed by Harika Chengelput &nbsp;</footer>
+    </div>
 
 </body>
 
