Changed title and added title icon

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 
 <head>
-    <title>Pixel Art Maker!</title>
+    <title>Harika's Pixel Art Maker!</title>
+    <link rel="title icon" href="images/favicon.ico">    
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Monoton">
     <link rel="stylesheet" href="styles/styles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -12,7 +13,7 @@
 <body>
 
     <div class="main_container">
-        <h1>Lab: Pixel Art Maker</h1>
+        <h1>Harika's Pixel Art Maker</h1>
 
 
 
